<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_servicios">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.usa.autoparts2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.usa.autoparts2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.usa.autoparts2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_productos"
        android:name="com.usa.autoparts2.view.nav_productos"
        android:label="productos"
        tools:layout="@layout/fragment_nav_productos" />
    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.usa.autoparts2.view.nav_servicios"
        android:label="servicios"
        tools:layout="@layout/fragment_nav_servicios" />
    <fragment
        android:id="@+id/nav_sucursales"
        android:name="com.usa.autoparts2.view.nav_sucursales"
        android:label="sucursales"
        tools:layout="@layout/fragment_nav_sucursales" />


</navigation>